force-app/main/default/objects/Previous_Study_Details__c/Previous_Study_Details__c.object-meta.xml
<CustomObject>
    <label>Previous Study Details</label>
    <nameField>
        <displayFormat>PSD-{000000}</displayFormat>
        <label>Previous Study Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Previous Study Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>