force-app/main/default/objects/Previous_Study_Details__c/fields/School_College__c.field-meta.xml
<CustomField>
    <fullName>School_College__c</fullName>
    <label>School / College</label>
    <length>255</length>
    <type>Text</type>
</CustomField>