force-app/main/default/objects/Previous_Study_Details__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Previous Study Details</relationshipLabel>
    <relationshipName>Previous_Study_Details</relationshipName>
    <type>Lookup</type>
</CustomField>