force-app/main/default/objects/Previous_Study_Details__c/fields/Year_of_Passing__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Passing__c</fullName>
    <label>Year of Passing</label>
    <length>4</length>
    <type>Text</type>
</CustomField>